--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   firebase_core: ^2.17.0
   firebase_auth: ^4.10.1
   http: ^1.1.0
+  fan_carousel_image_slider: ^0.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -52,6 +53,7 @@ dependencies:
   get: ^4.6.5
   image_picker: ^1.0.1
   font_awesome_flutter: ^10.5.0
+  flutter_rating_stars: ^1.0.3+4
 
 dev_dependencies:
   flutter_test:
