--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,16 +48,11 @@ dependencies:
   intl: ^0.18.1
   linkify: ^5.0.0
   lottie: ^2.1.0
+  shared_preferences: ^2.2.2
   timer_builder: ^2.0.0
   url_launcher: ^6.1.14
 
 dev_dependencies:
-
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
