--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   shared_preferences: ^2.2.2
   timer_builder: ^2.0.0
   url_launcher: ^6.1.14
+  connectivity: ^3.0.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
