--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   auto_size_text: ^3.0.0
   carousel_slider: ^4.2.1
+  connectivity: ^3.0.3
   cupertino_icons: ^1.0.2
   fan_carousel_image_slider: ^0.1.2
   firebase_auth: ^4.10.1
@@ -43,15 +44,18 @@ dependencies:
   font_awesome_flutter: ^10.5.0
   get: ^4.6.5
   google_nav_bar: ^5.0.6
+  googleapis: ^11.4.0
+  googleapis_auth: ^1.4.1
   http: ^1.1.0
-  image_picker: ^1.0.1
+  image: ^4.1.3
+  image_picker: ^1.0.4
   intl: ^0.18.1
   linkify: ^5.0.0
   lottie: ^2.1.0
+  path_provider: ^2.1.1
   shared_preferences: ^2.2.2
   timer_builder: ^2.0.0
   url_launcher: ^6.1.14
-  connectivity: ^3.0.3
 
 dev_dependencies:
   flutter_lints: ^2.0.0
